Bug 255224 - [IFC] Incorrect vertical positioning when ideographic baseline is present
Summary: [IFC] Incorrect vertical positioning when ideographic baseline is present
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on: 255256
Blocks:
  Show dependency treegraph
 
Reported: 2023-04-10 07:43 PDT by zalan
Modified: 2023-04-12 05:27 PDT (History)
5 users (show)

See Also:


Attachments
Patch (3.41 KB, patch)
2023-04-11 09:37 PDT, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (3.41 KB, patch)
2023-04-11 19:51 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-04-10 07:43:22 PDT
ssia
Comment 1 zalan 2023-04-11 09:37:38 PDT
Created attachment 465849 [details]
Patch
Comment 2 zalan 2023-04-11 19:51:41 PDT
Created attachment 465854 [details]
[fast-cq]Patch
Comment 3 EWS 2023-04-12 05:26:57 PDT
Committed 262868@main (4190c03e5516): <https://commits.webkit.org/262868@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 465854 [details].
Comment 4 Radar WebKit Bug Importer 2023-04-12 05:27:17 PDT
<rdar://problem/107934783>