[IFC] Incorrect vertical positioning when ideographic baseline is present https://bugs.webkit.org/show_bug.cgi?id=255224

Reviewed by Antti Koivisto.

Descent needs adjustment when picking ideographic baseline to be able to align the box correctly. Note that it is normally 0 for atomic inline boxes (in horizontal writing mode).

* LayoutTests/fast/inline/ideographic-baseline-with-vertical-align-expected.html: Added.
* LayoutTests/fast/inline/ideographic-baseline-with-vertical-align.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::adjustIdeographicBaselineIfApplicable):

Canonical link: https://commits.webkit.org/262868@main